# Offscreen-Vulkan

./: CMakeLists.txt  README.md
cmake/: add-libraries-linux.cmake  target-link-libraries-linux.cmake
include/: base.h  common.h  object.h  renderer.h
include/fileio/: file_codec.h  file_encoder.h  video_writer.h
shaders/: shader.frag  shader.frag.spv
source/: common.cpp  object.cpp  renderer.cpp  shader.cpp
source/fileio/: file_codec.cpp  file_encoder.cpp  video_writer.cpp
